# rednoise

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  PUBLISHING.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  compile_flags.txt
.github/workflows/: ci.yml  publish-npm.yml  publish-python.yml  publish-rust.yml  release.yml
assets/: cornell-box.mtl  textured.mtl
assets/logos/: SOURCES.md
bindings/python/: CMakeLists.txt  README.md  example.py  pyproject.toml
bindings/python/rednoise/: __init__.py
bindings/rust/: .gitignore  Cargo.toml  README.md  build.rs  vendor.sh
bindings/rust/examples/: render.rs
bindings/rust/src/: lib.rs
bindings/wasm/: README.md  build.sh  index.d.ts  index.js  package.json  wasm_api.cpp
cmake/: rednoiseConfig.cmake.in
examples/: c_consumer.c
framework/: Canvas.cpp  Canvas.h  CanvasPoint.cpp  CanvasPoint.h  CanvasTriangle.cpp  Colour.cpp  Colour.h  DrawingWindow.cpp  DrawingWindow.h  ModelTriangle.cpp  ModelTriangle.h  RayTriangleIntersection.h  TextureMap.cpp  TextureMap.h  TexturePoint.h
gpu/: gpu_pathtracer.cpp  pathtracer.cl  pathtracer.comp  spv_pathtracer.h  vk_pathtracer.cpp
include/rednoise/: rednoise.h
packaging/: README.md  RELEASE.md
packaging/conan/: conanfile.py
packaging/conan/test_package/: CMakeLists.txt  conanfile.py
packaging/conan/test_package/src/: example.c
packaging/vcpkg/ports/rednoise/: portfile.cmake  vcpkg.json
src/: Aniso.cpp  Aniso.h  BCn.cpp  BCn.h  BDPT.cpp  BDPT.h  BVH.cpp  BVH.h  Bezier.cpp  Bezier.h  Blackbody.cpp  Blackbody.h  Bloom.cpp  Bloom.h  Blur.cpp  Blur.h  Camera.cpp  Camera.h  Clouds.cpp  Clouds.h  ColourUtil.cpp  ColourUtil.h  Drawing.cpp  Drawing.h  EdgeRaster.cpp  EdgeRaster.h  Frustum.cpp  Frustum.h  Geometry.cpp  Geometry.h  Grid.cpp  Grid.h  HalfEdge.cpp  HalfEdge.h  Interpolation.cpp  Interpolation.h  IrradianceCache.cpp  IrradianceCache.h  KdTree.cpp  KdTree.h  (+55 more)
tests/: tests.cpp
tools/: animate.cpp  cli.cpp  gen_terrain.cpp  render_headless.cpp  render_ocean.cpp  rncli.hpp
