# Packaging metadata for the RedNoise Python bindings.
#
# This package builds and bundles the RedNoise shared library. scikit-build-core
# drives CMake to compile the installable `rednoise` library (C ABI) from the
# parent C++ project and installs the resulting .so / .dll / .dylib into the
# importable `rednoise/` package directory. Prebuilt wheels ship the library;
# building from an sdist requires a C++23-capable compiler and CMake >= 3.24.

[build-system]
requires = ["scikit-build-core>=0.8"]
build-backend = "scikit_build_core.build"

[project]
name = "rednoise"
version = "0.1.1"
description = "Python ctypes bindings for the RedNoise CPU software renderer, with the native library bundled."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "RedNoise contributors" },
]
keywords = ["renderer", "raytracer", "pathtracer", "graphics", "ctypes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

# No hard runtime dependencies: the binding is pure ctypes over the C ABI.
dependencies = []

[project.optional-dependencies]
# Pillow enables Image.to_pillow() and saving non-PNG formats.
pillow = ["Pillow>=8.0"]

[project.urls]
Homepage = "https://github.com/ReverseZoom2151/rednoise"
Repository = "https://github.com/ReverseZoom2151/rednoise"
Issues = "https://github.com/ReverseZoom2151/rednoise/issues"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.24"
wheel.packages = ["rednoise"]
